--- a/app/src/main/res/layout/activity_crear_base_datos.xml
+++ b/app/src/main/res/layout/activity_crear_base_datos.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ActivityCrearBaseDatos"
+    tools:context=".CrearBaseDatos"
     android:background="@drawable/suspantalla3">
 
     <Button
