--- a/app/src/main/res/layout/inicio_sesion_relative.xml
+++ b/app/src/main/res/layout/inicio_sesion_relative.xml
@@ -42,9 +42,9 @@
             android:id="@+id/imageView"
             android:layout_width="286dp"
             android:layout_height="50dp"
-            android:layout_marginTop="5dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
+            android:layout_marginTop="5dp"
             android:adjustViewBounds="true"
             app:srcCompat="@drawable/red_among_us_png" />
 
@@ -90,7 +90,7 @@
             android:layout_marginTop="5dp"
             android:ems="10"
             android:hint="@string/espacio"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:minHeight="48dp"
             android:password="false"
             android:text=""
